--- a/index.css
+++ b/index.css
@@ -159,18 +159,28 @@ hr{
 
 
 .gpic1{
+    height: 200px;
+    width: 200px;
   border: 2px solid black
 }
 
 .gpic2{
+    
+    height: 200px;
+    width: 200px;
     border: 2px solid black
 }
 
 .gpic3{
+    
+    height: 200px;
+    width: 200px;
     border: 2px solid black
 }
 
 .gpic4{
+    
+    height: 200px;
+    width: 200px;
     border: 2px solid black
 }
-
